--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - https://raw.githubusercontent.com/argoproj/argo-cd/v2.9.3/manifests/install.yaml
+- tls-cert.yaml
 - ingress.yaml
 patchesStrategicMerge:
 - argocd-cm.yaml
