change keycloak ingress

--- a/argocd/common-deployment-patch.yaml
+++ b/argocd/common-deployment-patch.yaml
@@ -12,4 +12,6 @@ spec:
           - "keycloak.homelab.com"
           - "keycloak2.homelab.com"
           - "argocd.homelab.com"
+          - "keycloak.homelab.kszpakowski.com"
+          - "argocd.homelab.kszpakowski.com"
           
