--- a/keycloak/ingress.yaml
+++ b/keycloak/ingress.yaml
@@ -1,18 +1,16 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: keycloak
-  annotations:
-    cert-manager.io/issuer: "ca-issuer"
 spec:
-  rules:
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: keycloak
-            port:
-              number: 8080
-    host: keycloak.homelab.com
+  entryPoints:
+    - web
+    - websecure
+  routes:
+    - match: Host(`keycloak.homelab.kszpakowski.com`)
+      kind: Rule
+      services:
+        - name: keycloak
+          port: 8080
+  tls:
+    secretName: keycloak-tls
