--- a/kafka-connect-cluster/connect-cluster.yaml
+++ b/kafka-connect-cluster/connect-cluster.yaml
@@ -1,14 +1,16 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaConnect
 metadata:
-  name: my-connect
+  name: customer-platforms-connect-cluster
 spec:
-  # ...
+  version: 3.2.3
+  replicas: 1
+  bootstrapServers: customer-platforms-kafka-bootstrap:9092
   config:
-    group.id: my-connect-cluster
-    offset.storage.topic: my-connect-cluster-offsets
-    config.storage.topic: my-connect-cluster-configs
-    status.storage.topic: my-connect-cluster-status
+    group.id: customer-platforms-connect-cluster
+    offset.storage.topic: customer-platforms-connect-cluster-offsets
+    config.storage.topic: customer-platforms-connect-cluster-configs
+    status.storage.topic: customer-platforms-connect-cluster-status
     key.converter: org.apache.kafka.connect.json.JsonConverter
     value.converter: org.apache.kafka.connect.json.JsonConverter
     key.converter.schemas.enable: true
