--- a/apps/kafka-connect.yaml
+++ b/apps/kafka-connect.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: kafka-connect
     server: 'https://kubernetes.default.svc'
   source:
-    path: ''
+    path: 'charts/cp-kafka-connect'
     repoURL: 'https://github.com/confluentinc/cp-helm-charts.git'
     targetRevision: master
     chart: cp-kafka-connect
