--- a/apps/kafka-connect.yaml
+++ b/apps/kafka-connect.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     path: 'charts/cp-kafka-connect'
     repoURL: 'https://github.com/confluentinc/cp-helm-charts.git'
-    targetRevision: HEAD
+    targetRevision: "0.1.0"
     chart: cp-kafka-connect
   sources: []
   project: default
