--- a/apps/kafka-connect.yaml
+++ b/apps/kafka-connect.yaml
@@ -1,3 +1,4 @@
+# https://argo-cd.readthedocs.io/en/stable/user-guide/multiple_sources/#helm-value-files-from-external-git-repository
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -10,10 +11,16 @@ spec:
     name: ''
     namespace: kafka-connect
     server: 'https://kubernetes.default.svc'
-  source:
-    path: 'charts/cp-kafka-connect'
-    repoURL: 'https://github.com/confluentinc/cp-helm-charts.git'
-  sources: []
+  sources:
+    - repoURL: 'https://github.com/confluentinc/cp-helm-charts.git'
+      path: 'charts/cp-kafka-connect'
+      helm:
+      valueFiles:
+      - $values/values.yaml
+    - repoURL: https://github.com/kszpakowski/homelab-apps.git
+      path: kafka-connect
+      ref: values
+    
   project: default
   syncPolicy:
     automated:
