--- a/apps/crm.yaml
+++ b/apps/crm.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     helm:
-      valuesFiles:
+      valueFiles:
         - values.yaml
     path: crm
     repoURL: https://github.com/kszpakowski/homelab-apps.git
