set cluster issuer

--- a/cert-manager/homelab-kszpakowski-com-tls-cert.yaml
+++ b/cert-manager/homelab-kszpakowski-com-tls-cert.yaml
@@ -8,4 +8,5 @@ spec:
   - "*.homelab.kszpakowski.com"
   issuerRef:
     name: letsencrypt
+    kind: ClusterIssuer
   secretName: wildcard-homelab-kszpakowski-com-tls
