swap postgres operator image

--- a/postgres-operator/kustomization.yaml
+++ b/postgres-operator/kustomization.yaml
@@ -10,3 +10,7 @@ patches:
   target:
     kind: ServiceAccount
     name: postgres-operator
+images:
+- name: registry.opensource.zalan.do/acid/postgres-operator
+  newName: ghcr.io/zalando/postgres-operator
+  newTag: v1.11.0
