fix namespace in postgres resources

--- a/postgres-operator/kustomization.yaml
+++ b/postgres-operator/kustomization.yaml
@@ -6,9 +6,13 @@ resources:
 - https://github.com/zalando/postgres-operator/raw/master/manifests/postgres-operator.yaml
 - https://github.com/zalando/postgres-operator/raw/master/manifests/api-service.yaml
 patches:
-- path: service-account-patch.yaml
+- path: ns-patch.yaml
   target:
     kind: ServiceAccount
+    name: postgres-operator
+- path: ns-patch.yaml
+  target:
+    kind: ClusterRoleBinding
     name: postgres-operator
 images:
 - name: registry.opensource.zalan.do/acid/postgres-operator
