--- a/postgres-cluster/cluster.yaml
+++ b/postgres-cluster/cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
-  name: crm-minimal-cluster
+  name: minimal-cluster
 spec:
   teamId: "crm"
   volume:
