--- a/sealed-secrets/sealed-secrets-controller-deployment.yaml
+++ b/sealed-secrets/sealed-secrets-controller-deployment.yaml
@@ -1,4 +1,5 @@
 # Enable sealed secrets status reporting to argo cd - https://argo-cd.readthedocs.io/en/stable/faq/#why-are-resources-of-type-sealedsecret-stuck-in-the-progressing-state
+# Disable automatic key renewal
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -10,4 +11,5 @@ spec:
       containers:
       - args:
         - --update-status
+        - --key-renew-period=0
         name: sealed-secrets-controller
