add accessory info and disable http plugin

--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -79,6 +79,9 @@ data:
                 "showExtraFeatures": false,
                 "platform": "DaikinCloud"
             }
+        ],
+        "disabledPlugins": [
+          "homebridge-http"
         ]
     }
 
