mount accessory info from secret

--- a/homebridge/deployment.yaml
+++ b/homebridge/deployment.yaml
@@ -33,8 +33,9 @@ spec:
               memory: "512Mi"
               cpu: "500m"
           volumeMounts:
-            - name: homebridge-volume
-              mountPath: /homebridge
+            - name: homebridge-accessory-info
+              mountPath: /homebridge/persist/AccessoryInfo.0E83BA9DE9B8.json
+              subPath: AccessoryInfo.0E83BA9DE9B8.json
             - name: homebridge-config
               mountPath: /homebridge/config.json.template
               subPath: config.json
@@ -84,6 +85,6 @@ spec:
         configMap:
           name: homebridge-configmap
           defaultMode: 0711
-      - name: homebridge-volume
-        persistentVolumeClaim:
-          claimName: homebridge-pvc
+      - name: homebridge-accessory-info
+        secret:
+          secretName: homebridge-accessory-info
