--- a/homebridge/deployment.yaml
+++ b/homebridge/deployment.yaml
@@ -34,9 +34,8 @@ spec:
               cpu: "500m"
           volumeMounts:
             - name: homebridge-accessory-info
-              mountPath: /homebridge/persist/AccessoryInfo.0E83BA9DE9B8.json
+              mountPath: /homebridge/persist/AccessoryInfo.0E83BA9DE9B8.json.template
               subPath: AccessoryInfo.0E83BA9DE9B8.json
-              readonly: false
             - name: homebridge-config
               mountPath: /homebridge/config.json.template
               subPath: config.json
