--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -1,15 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-# - https://raw.githubusercontent.com/argoproj/argo-cd/v2.10.7/manifests/install.yaml
 - tls-cert.yaml
 - ingress.yaml
-# patchesStrategicMerge:
-# - argocd-cm.yaml
-# - argocd-cmd-params-cm.yaml
-# - argocd-rbac-cm.yaml
-# patches:
-# - path: common-deployment-patch.yaml
-#   target:
-#     kind: Deployment
-  
+- argocd-cmd-params-cm.yaml
