--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -101,7 +101,7 @@ data:
 
     # install plugins
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
-    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-http 0.0.9 /var/lib/homebridge/node_modules
+    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-ble-lights 1.0.0 /var/lib/homebridge/node_modules
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
 
     # install envsubst
