--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -80,10 +80,12 @@ data:
     #!/bin/bash
 
     # install plugins
-    # /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
-    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-ble-lights 1.0.0 /var/lib/homebridge/node_modules
-    # /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
+    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
+    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
 
+    #install unverified plugins
+    npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.0
+    
     # install envsubst
     apt-get update
     apt-get install gettext-base
