--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -79,19 +79,19 @@ data:
   startup.sh: |
     #!/bin/bash
 
-    #install unverified plugins
+    echo "install unverified plugins"
     npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.0
     
-    # install plugins
+    echo "install verified plugins"
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
 
     
-    # install envsubst
+    echo "install envsubst"
     apt-get update
     apt-get install gettext-base
 
-    # pass secrets to config files from env variables
+    echo "pass secrets to config files from env variables"
     envsubst < /homebridge/config.json.template > /homebridge/config.json
     envsubst < /homebridge/auth.json.template > /homebridge/auth.json
     envsubst <  /homebridge/persist/AccessoryInfo.0E83BA9DE9B8.json.template >  /homebridge/persist/AccessoryInfo.0E83BA9DE9B8.json
