disable custom plugin

--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -79,8 +79,8 @@ data:
   startup.sh: |
     #!/bin/bash
 
-    echo "install unverified plugins"
-    npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.0
+    # echo "install unverified plugins"
+    # npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.0
     
     echo "install verified plugins"
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
