--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -80,11 +80,11 @@ data:
     #!/bin/bash
 
     # echo "install unverified plugins"
-    npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.5
+    npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.7
     
     echo "install verified plugins"
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
-    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
+    # /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
 
     
     echo "install envsubst"
