--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -58,9 +58,6 @@ data:
                 "password": "$DAIKIN_CLOUD_PASS",
                 "showExtraFeatures": false,
                 "platform": "DaikinCloud"
-            },
-            {
-                "platform":"ble-lights"
             }
         ]
     }
@@ -79,14 +76,10 @@ data:
   startup.sh: |
     #!/bin/bash
 
-    # echo "install unverified plugins"
-    npm install --prefix /var/lib/homebridge --save homebridge-ble-lights@1.0.8
-    
     echo "install verified plugins"
     /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 1.7.3 /var/lib/homebridge/node_modules
-    # /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
+    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
 
-    
     echo "install envsubst"
     apt-get update
     apt-get install gettext-base
