--- a/homebridge/ingress.yaml
+++ b/homebridge/ingress.yaml
@@ -20,3 +20,26 @@ spec:
             name: homebridge-ui
             port:
               name: http
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: homebridge
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt
+spec:
+  tls:
+    - hosts:
+      - daikin-callback.homelab.kszpakowski.com
+      secretName: homebridge-cert
+  rules:
+  - host: "homebridge.homelab.kszpakowski.com"
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: homebridge-daikin-callback
+            port:
+              name: http
