--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -56,7 +56,7 @@ data:
             {
                 "clientId": "$DAIKIN_CLOUD_CLIENT_ID",
                 "clientSecret": "$DAIKIN_CLOUD_CLIENT_SECRET",
-                "callbackServerExternalAddress": "daikin-callback.homelab.kszpakowski.com",
+                "callbackServerExternalAddress": "daikin-callback.homelab.kszpakowski.com/",
                 "callbackServerPort": "8582",
                 "oidcCallbackServerBindAddr": "0.0.0.0",
                 "showExtraFeatures": false,
