--- a/bun-cert-manager-demo/cert.yaml
+++ b/bun-cert-manager-demo/cert.yaml
@@ -7,5 +7,5 @@ spec:
     - bun-cert-manager-demo.bun-cert-manager-demo
   secretName: tls-cert
   issuerRef:
-    name: selfsigned-issuer
+    name: ca-issuer
     kind: ClusterIssuer
