update volume mount path

--- a/bun-cert-manager-demo/deployment.yaml
+++ b/bun-cert-manager-demo/deployment.yaml
@@ -27,7 +27,7 @@ spec:
             cpu: "250m"
         volumeMounts:
         - name: tls
-          mountPath: /usr/src/app
+          mountPath: /usr/src/app/tls
           readOnly: true
       volumes:
         - name: tls
