--- a/node-tls-client-demo/deployment.yaml
+++ b/node-tls-client-demo/deployment.yaml
@@ -29,7 +29,7 @@ spec:
         - name: NODE_EXTRA_CA_CERTS
           value: ./ca/ca.pem
         - name: FETCH_URL
-          value: bun-cert-manager-demo.bun-cert-manager-demo
+          value: https://bun-cert-manager-demo.bun-cert-manager-demo
         - name: FETCH_INTERVAL_MS
           value: "3000"
 
