--- a/apps/localstack.yaml
+++ b/apps/localstack.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: trust-manager
+  name: localstack
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: cert-manager
+    namespace: localstack
     server: 'https://kubernetes.default.svc'
   source:
     repoURL: 'https://helm.localstack.cloud'
