--- a/homebridge/configmap.yaml
+++ b/homebridge/configmap.yaml
@@ -81,8 +81,8 @@ data:
     #!/bin/bash
 
     echo "install verified plugins"
-    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-daikin-cloud 2.5.0 /var/lib/homebridge/node_modules
-    /opt/homebridge/lib/node_modules/homebridge-config-ui-x/plugin-upgrade-install.sh homebridge-mi-hygrothermograph 3.4.2 /var/lib/homebridge/node_modules
+    hb-service add homebridge-daikin-cloud@2.5.0
+    hb-service add homebridge-mi-hygrothermograph@3.4.2
 
     echo "install unverified plugins"
     npm i homebridge-http
