--- a/apps/localstack.yaml
+++ b/apps/localstack.yaml
@@ -14,6 +14,8 @@ spec:
     chart: localstack
     helm:
       parameters:
+        - name: image.tag
+          value: "4.0.3"
         - name: mountDind.enabled
           value: "true"
         - name: debug
