--- a/apps/nats.yaml
+++ b/apps/nats.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ntas
+  name: nats
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
