--- a/apps/cell1.yaml
+++ b/apps/cell1.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd
+  name: cell1
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
