--- a/apps/grafana-alloy.yaml
+++ b/apps/grafana-alloy.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     repoURL: https://grafana.github.io/helm-charts
     targetRevision: "0.12.5"
-    chart: grafana/alloy
+    chart: alloy
   project: default
   syncPolicy:
     automated:
